--- a/Dev Full Stack Python/Módulo 05 - Projeto 01/style.css
+++ b/Dev Full Stack Python/Módulo 05 - Projeto 01/style.css
@@ -73,6 +73,14 @@ main {
     margin-bottom: 8px;
 }
 
+#areatxt {
+    resize: none;
+}
+
+input:focus, #areatxt:focus {/*mudar a cor quando selecionado*/
+    outline-color: #182C61;
+}
+
 #botao {
     padding: 10px;
     font-family: 'Bungee', cursive;
