final do exercício do módulo 09

--- a/Dev Full Stack Python/Módulo 09 - Conhecendo jQuery/teste do exercício/style.css
+++ b/Dev Full Stack Python/Módulo 09 - Conhecendo jQuery/teste do exercício/style.css
@@ -50,9 +50,13 @@ button {
     padding: 20px;
 }
 
-#lista ul li {
+#lista li {
     padding: 10px;
     border-bottom: 1px solid white;
     border-collapse: collapse;
     cursor: pointer;
+}
+
+.add-riscado {
+    text-decoration: line-through;
 }
