conclusão da seção de planos

--- a/Dev Full Stack Python/Módulo 21 - Projeto 4/src/styles/_cores.scss
+++ b/Dev Full Stack Python/Módulo 21 - Projeto 4/src/styles/_cores.scss
@@ -1,5 +1,5 @@
 $corDeFundo: #040714;
 $botao: #6421ff;
 $botaoHover: #7828FF;
-$corTitulo: #f9f9f9;
-$corTxt: silver;
+$corPrimaria: #f9f9f9;
+$corSecundaria: silver;
