--- a/Dev Full Stack Python/Módulo 21 - Projeto 4/src/styles/main.scss
+++ b/Dev Full Stack Python/Módulo 21 - Projeto 4/src/styles/main.scss
@@ -1,13 +1,46 @@
 @use "cores";
 @use "mixins";
 @use "hero";
+@use "shows";
+@use "plans";
+
+@font-face {
+    font-family: Avenir;
+    src: url(../../Assets/Avenir-Bold.woff2);
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: Avenir;
+    src: url(../../Assets/Avenir-Regular.woff2);
+    font-weight: 400;
+}
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style-type: none;
+    text-decoration: none;    
+    font-family: Avenir, sans-serif;
 }
 
 body {
     background-color: cores.$corDeFundo;
+}
+
+.button {
+    display: block;
+    width: 100%;
+    padding: 8px;
+    margin-top: 2vw;
+    background-color: cores.$botao;
+    border: none;
+    color: cores.$corPrimaria;
+    text-transform: uppercase;
+    cursor: pointer;
+
+    &:hover {
+        background-color: cores.$botaoHover;
+    }
 }
