conclusão da seção faq

--- a/Dev Full Stack Python/Módulo 21 - Projeto 4/src/styles/main.scss
+++ b/Dev Full Stack Python/Módulo 21 - Projeto 4/src/styles/main.scss
@@ -3,6 +3,9 @@
 @use "hero";
 @use "shows";
 @use "plans";
+@use "watch-anywere";
+@use "available-devices";
+@use "faq";
 
 @font-face {
     font-family: Avenir;
