--- a/Dev Full Stack Python/Módulo 21 - Projeto 4/src/styles/_faq.scss
+++ b/Dev Full Stack Python/Módulo 21 - Projeto 4/src/styles/_faq.scss
@@ -1,6 +1,7 @@
 @use "cores";
+
 .faq {
-    padding: 5.6vh;
+    padding: 5.6vw;
 
     h2 {
         text-align: center;
@@ -12,24 +13,28 @@
         margin-top: 16px;
 
         &__question {
+            font-size: 20px;
+            color: cores.$corPrimaria;
             width: 100%;
             padding: 24px;
             cursor: pointer;
             display: flex;
             justify-content: space-between;
-
+            align-items: center;
         }
         
         #faq1, #faq2, #faq3, #faq4{
             display: none;
         }
-        
-        &__answer {
-            padding: 0 24px 24px;
 
+        #faq2 {
             p:last-child {
                 margin-top: 16px;
             }
+        }
+        
+        &__answer {
+            padding: 0 24px 24px;
 
             ul{
                 margin-top: 16px;
