--- a/Dev Full Stack Python/Módulo 21 - Projeto 4/src/styles/_hero.scss
+++ b/Dev Full Stack Python/Módulo 21 - Projeto 4/src/styles/_hero.scss
@@ -1,11 +1,26 @@
 @use "cores";
 
 .hero {
+    padding: 5.6vw;
     min-height: 80vh;
-    padding: 5.6vh;
     background: url(../images/hero_desktop.jpeg);
     background-size: cover;
     text-align: center;
+
+    @media (max-width:992px) {
+        background: url(../../destino/images/hero_celular.jpeg) no-repeat;
+        background-size: cover;
+        padding-top: calc(50vw - 25px);
+        margin-top: -55px;
+    }
+    @media (max-width:768px) {
+        background-size: contain;
+    }
+
+
+    .button {
+        margin: 2vw 0 8px;        
+    }
 
     &__content {
         max-width: 640px;
@@ -13,6 +28,10 @@
         &__branding {
             max-width: 320px;
             margin: 0 auto 38px;
+
+            @media (max-width:768px) {
+                max-width: 180px;
+            }
         }
 
         p {
@@ -27,8 +46,16 @@
             display: flex;
             justify-content: space-between;
 
+            @media (max-width:768px) {
+                display: block;
+            }
+
             &__combo {
                 width: calc(50% - 12px);
+                
+                @media (max-width:768px) {
+                    width: 100%;
+                }
 
                 img {
                     max-height: 60px;
