--- a/Dev Full Stack Python/Módulo 21 - Projeto 4/src/styles/_shows.scss
+++ b/Dev Full Stack Python/Módulo 21 - Projeto 4/src/styles/_shows.scss
@@ -10,6 +10,10 @@
         display: flex;
         justify-content: center;
 
+        @media (max-width:768px) {
+            white-space: nowrap;
+        }
+
         &__button{
             cursor: pointer;
             background: none;
@@ -20,6 +24,10 @@
             font-size: 20px;
             padding-bottom: 5px;
             margin: 0 1vw;
+
+            @media (max-width:768px) {
+                font-size: 16px;
+            }
 
             &--is-active {
                 border-color: cores.$corPrimaria;
@@ -32,6 +40,10 @@
         display: none;
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 24px;
+
+        @media (max-width:768px){
+            grid-template-columns: 1fr 1fr;
+        }
 
         &--is-active {
             display: grid;
