--- a/Dev Full Stack Python/Módulo 21 - Projeto 4/src/styles/_watch-anywere.scss
+++ b/Dev Full Stack Python/Módulo 21 - Projeto 4/src/styles/_watch-anywere.scss
@@ -7,6 +7,11 @@
         align-items: center;
         padding: 5.6vw;
 
+        @media (max-width:768px) {
+            display: block;
+        }
+
+
         img {
             max-width: 100%;
         }
@@ -22,24 +27,44 @@
 }
 
 .filmes-series {
-    padding: 5.6vh;
+    padding: 10vw 5vw;
 
     &__content {
-        height: 100vh;
-        background: url(../../destino/images/fundo_rei_leao.png) center no-repeat;
-        background-size: cover;
-        position: relative;
+
+        @media (min-width: 768px) {
+                position: relative;
+            }
         
-        div {
-            position: absolute;
-            top: 0;
-            right: 5vw;
-            bottom: 0;
-            width: calc(50% - 5vw);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
+        img {
+            width: 100%;
+            margin-bottom: 20px;
+            
+            }
+        
+            div {
+
+                @media (min-width: 768px) {
+                    position: absolute;
+                    top: 0;
+                    left: 50%;
+                    width: calc(50% - 5.6vw);
+                    height: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    flex-direction: column;
+                }
+                
+                h2{
+                    margin-bottom: 16px;
+                    text-align: center;
+                }
+        
+                p {
+                    text-align: center;
+                }
+
+            }
     }
 
 }
