--- a/Dev Full Stack Python/Módulo 21 - Projeto 4/src/styles/mixins.scss
+++ b/Dev Full Stack Python/Módulo 21 - Projeto 4/src/styles/mixins.scss
@@ -8,15 +8,28 @@
 
 .text--big {
     @include text(18px);
+
+    @media (max-width:768px) {
+        @include text(15px);
+    }
+
 }
 
 .text {
     @include text;
+
+    @media (max-width:768px) {
+        @include text(14px);
+    }
 }
 
 .text--small {
     @include text(12px);
     color: cores.$corPrimaria;
+
+    @media (max-width:768px) {
+        @include text(11px);
+    }
 }
 
 .link-text {
@@ -32,12 +45,26 @@
 
 .title--big {
     @include title(44px);
+
+    @media (max-width:768px) {
+        @include title(26px);
+    }
 }
 
 .title {
     @include title;
+
+    @media (max-width:768px) {
+        @include title(24px);
+    }
+
+
 }
 
 .title--small {
-    @include title(28px)
+    @include title(28px);
+
+    @media (max-width:768px) {
+        @include title(22px);
+    }
 }
