--- a/Dev Full Stack Python/Módulo 22 - Landing Page/src/styles/main.scss
+++ b/Dev Full Stack Python/Módulo 22 - Landing Page/src/styles/main.scss
@@ -1,3 +1,26 @@
-body {
-    background-color: green;
+@use 'header';
+@use 'event';
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    list-style-type: none;
+    text-decoration: none;
+}
+
+.container {
+    display: block;
+    margin: 0 auto;
+    max-width: 90%;
+}
+
+@media (min-width: 960px) {
+
+    .container {
+        max-width: 960px;
+        width: 100%;
+    }
 }
