--- a/Dev Full Stack Python/Módulo 22 - Landing Page/src/styles/header.scss
+++ b/Dev Full Stack Python/Módulo 22 - Landing Page/src/styles/header.scss
@@ -1,3 +1,5 @@
+@use 'colors';
+
 .header {
     background: url(../images/fundo.png) no-repeat;
     background-size: cover;
@@ -11,7 +13,7 @@
         width: 100%;
         height: 100%;
         content: '';
-        background-color: #000;
+        background-color: colors.$secondaryText;
         opacity: .7;
 
     }
@@ -34,7 +36,7 @@
         }
 
         .header__info {
-            background-color: #fff;
+            background-color: colors.$textColor;
             padding: 16px 24px;
     
             &__list {
@@ -42,10 +44,10 @@
                 &__item {
                     margin-bottom: 24px;
                     font-size: .9em;
-                    color: #000;
+                    color: colors.$secondaryText;
     
                     b {
-                        color: #000;
+                        color: colors.$secondaryText;
                         display: block;
                         font-size: 1.3em;
                     }
@@ -59,7 +61,7 @@
                 padding: 12px;
                 width: 100%;
                 text-align: center;
-                background-color: #4f2ac3;
+                background-color: colors.$purple;
                 cursor: pointer;
             }
         }
